Fix the height of empty cells in datagrids on small devices

--- a/assets/css/easyadmin-theme/datagrids.css
+++ b/assets/css/easyadmin-theme/datagrids.css
@@ -23,6 +23,7 @@ table.datagrid {
   }
   table.datagrid:not(.datagrid-empty) tr:not(.empty-row) td {
     box-shadow: inset 0 1px 0 var(--table-cell-border-color);
+    min-height: 36px;
     padding-left: 35%;
     position: relative;
   }
